--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <span class="badge rounded-pill hero-badge mb-3">Nova imagem • Mundo TVDE</span>
             <h1 class="display-4 fw-bold lh-sm mb-3">Conduz o teu futuro com uma marca que acelera contigo.</h1>
             <p class="lead mb-4 text-white-50">
-              Um template moderno, premium e pronto para ligar ao teu backoffice — pensado para atrair motoristas TVDE e converter contactos em inscrições.
+              Uma página moderna e premium, pensada para atrair motoristas TVDE e converter contactos em inscrições.
             </p>
             <div class="d-flex flex-wrap gap-3">
               <a class="btn btn-primary btn-lg px-4" href="#contactos">Quero ser motorista</a>
@@ -97,7 +97,7 @@
               </ul>
               <hr class="my-4" />
               <p class="mb-0 text-secondary small">
-                Este layout mantém a estrutura de informação essencial do site atual e está preparado para integração com conteúdo dinâmico.
+                Este site mantém a estrutura de informação essencial e facilita futuras atualizações de conteúdo.
               </p>
             </div>
           </div>
@@ -163,7 +163,7 @@
             </div>
             <div class="col-lg-6">
               <div class="highlight-panel p-4 p-lg-5">
-                <h4 class="fw-bold mb-3">Preparado para backoffice</h4>
+                <h4 class="fw-bold mb-3">Gestão simples e eficiente</h4>
                 <p class="text-secondary">
                   Cada secção foi desenhada para receber dados do teu sistema: serviços, testemunhos, FAQ, formulários e contactos.
                 </p>
@@ -236,7 +236,7 @@
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q3">Posso atualizar informações no futuro?</button>
               </h2>
               <div id="q3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                <div class="accordion-body">Sim. O template foi estruturado para edição fácil e ligação a CMS/backoffice.</div>
+                <div class="accordion-body">Sim. O site foi estruturado para edição fácil e manutenção rápida.</div>
               </div>
             </div>
           </div>
@@ -250,7 +250,7 @@
               <span class="section-kicker text-white-50">Contacto</span>
               <h2 class="fw-bold mb-3">Vamos criar a tua próxima etapa na mobilidade</h2>
               <p class="mb-0 text-white-50">
-                Liga este front-end ao teu backoffice e transforma visitas em oportunidades reais.
+                Usa este site para transformar visitas em oportunidades reais.
               </p>
             </div>
             <div class="col-lg-5">
@@ -268,8 +268,8 @@
 
     <footer class="py-4">
       <div class="container d-flex flex-column flex-md-row justify-content-between gap-2 text-secondary">
-        <small>© 2026 Mundo TVDE. Template demonstrativo.</small>
-        <small>Desenvolvido com Bootstrap 5 para fácil integração.</small>
+        <small>© 2026 Mundo TVDE. Todos os direitos reservados.</small>
+        <small>Desenvolvido com Bootstrap 5.</small>
       </div>
     </footer>
 
