--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg fixed-top glass-nav">
       <div class="container py-1">
         <a class="navbar-brand fw-bold text-white" href="#home">
-          <i class="bi bi-car-front-fill me-2"></i>Mundo TVDE
+          <img src="public/assets/website/img/logo_white.png" alt="Mundo TVDE" style="height: 44px; width: auto" />
         </a>
         <button
           class="navbar-toggler text-white border-0"
